fix: generated auto-id is reused when storing rows into a table that inherits another one with auto-id. (#6202)
When storing rows into a table (A) that inherits another (B), we first store that data in B. Once stored, we now reuse that values from the stored rows in B when inserting into A. This fixes a bug where values that are generated during insert (auto-id), are no longer generated again.